--- a/app/globals.css
+++ b/app/globals.css
@@ -92,7 +92,8 @@ html {
 }
 
 .animate-scroll {
-  animation: scroll 25s linear infinite;
+  animation: scroll 20s linear infinite;
+  will-change: transform;
 }
 
 /* Pause on hover */
